--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h2 class="content-section__title">Почему сосредоточиться так сложно</h2>
         <article class="content-section__article">
           <h3 class="title-decor article-title">Многозадачность</h3>
-          <p class="content-section__article-text">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a href="https://dana.org/news-and-insights/" class="accent-link">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
+          <p class="content-section__article-text">Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи <a href="https://dana.org/news-and-insights/" class="accent-link" target="blank">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.</p>
         </article>
         <article class="content-section__article">
           <h3 class="title-decor article-title">Дофамин</h3>
@@ -79,23 +79,23 @@
         <h2 class="content-section__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
         <h3 class="title-decor article-title article-title__unusual">5 простых (на самом деле не очень) советов </h3>
         <article class="content-section__article">
-          <h4 class="title-decor article-title ligth__article-title">Представьте небо и облака</h4>
+          <h4 class="title-decor article-title light__article-title">Представьте небо и облака</h4>
           <p class="content-section__article-text">Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных задачах как раз и мешают эти сложные задачи делать. В такие моменты можно закрыть глаза и представить, что чистое небо — это вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется. Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.</p>
         </article>
         <article class="content-section__article">
-          <h4 class="title-decor article-title ligth__article-title">Включите музыку</h4>
+          <h4 class="title-decor article-title light__article-title">Включите музыку</h4>
           <p class="content-section__article-text">Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист с «белым шумом» или нейромузыкой.</p>
         </article>
         <article class="content-section__article">
-          <h4 class="title-decor article-title ligth__article-title">Прогуляйтесь</h4>
-          <p class="content-section__article-text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" class="accent-link">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
+          <h4 class="title-decor article-title light__article-title">Прогуляйтесь</h4>
+          <p class="content-section__article-text">Или даже пробегитесь. Лучше найти парк или лес: один эксперимент <a href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328" class="accent-link" target="blank">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается. Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.</p>
         </article>
         <article class="content-section__article">
-          <h4 class="title-decor article-title ligth__article-title">Хорошо ешьте</h4>
+          <h4 class="title-decor article-title light__article-title">Хорошо ешьте</h4>
           <p class="content-section__article-text">Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.</p>
         </article>
         <article class="content-section__article">
-          <h4 class="title-decor article-title ligth__article-title">Читайте</h4>
+          <h4 class="title-decor article-title light__article-title">Читайте</h4>
           <p class="content-section__article-text">Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.</p>
         </article>
       </section>
