--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Сложно сосредоточиться</title>
     <link rel="stylesheet" href="./fonts/fonts.css">
+    <!-- <link rel="stylesheet" href="./styles/globals.css"> -->
     <link rel="stylesheet" href="./styles/variables.css">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/dark.css">
@@ -17,7 +18,7 @@
     <script src="./scripts/script.js"></script>
   </head>
   <body class="page">
-    <header class="header header__decorated-zone">
+    <header class="header decorated-zone header__decorated-zone">
       <nav class="header__theme-menu">
         <span class="nav-decoration" aria-hidden="true">REC</span>
         <ul class="header__theme-menu-list">
@@ -62,7 +63,8 @@
       </section>
       <section class="content-section different-section">
         <h2 class="content-section__title">Что снижает концентрацию внимания?</h2>
-        <article class="content-section__article different-grid">
+        <div class="different-section__grid-container">
+          <article class="content-section__article different-grid">
           <h3 class="title-decor article-title">Многозадачность</h3>
           <p class="content-section__article-text">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно. Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
         </article>
@@ -74,6 +76,7 @@
           <h3 class="title-decor article-title">Гаджеты</h3>
           <p class="content-section__article-text">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.</p>
         </article>
+        </div>
       </section>
       <section class="content-section several-colums-grid">
         <h2 class="content-section__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
@@ -108,7 +111,7 @@
         <img src="./images/street.png" alt="Фиолетовая картинка, изображающая переулок Японии" loading="lazy" class="content-section__gallery-img">
       </section>
     </main>
-    <footer class="footer footer__decorated-zone">
+    <footer class="footer decorated-zone footer__decorated-zone">
       <h5 class="footer-title main-title">focus</h5>
     </footer>
   </body>
