--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   </head>
   <body class="page">
     <header class="header decorated-zone header__decorated-zone">
+      <span class="text-decoration" aria-hidden="true">REC</span>
       <nav class="header__theme-menu">
-        <span class="nav-decoration" aria-hidden="true">REC</span>
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
             <button
@@ -79,7 +79,7 @@
         </div>
       </section>
       <section class="content-section several-colums-grid">
-        <h2 class="content-section__title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
+        <h2 class="content-section__title title-how">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
         <h3 class="title-decor article-title article-title__unusual">5 простых (на самом деле не очень) советов </h3>
         <article class="content-section__article">
           <h4 class="title-decor article-title light__article-title">Представьте небо и облака</h4>
